fixed description bg and added z-index 99 to imgs

--- a/index-3.css
+++ b/index-3.css
@@ -129,6 +129,7 @@ article {
 .image img {
     width: 100%;
     height: 100%;
+    z-index: 99;
     object-fit: cover;
 }
 
@@ -147,6 +148,7 @@ article {
     padding: 25px;
 
     overflow: hidden;
+    background-color: #d400ff;
     color: white;
     height: 50px;
 
